[package]
name = "cli"
version = "0.1.0"
authors = ["Marcin Puc <marcin.e.puc@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "untangle"
path = "src/main.rs"

[dependencies]

solver = { path = "../solver" }

anyhow = "1.0.32"
itertools = "0.9.0"
structopt = "0.3.16"
thiserror = "1.0.20"