[package]
name = "untangle"
version = "0.1.0"
authors = ["Marcin Puc <marcin.e.puc@gmail.com>"]
edition = "2018"
description = "A solver for Strata game puzzles"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

untangle_solver = { path = "../solver" }

anyhow = "1.0.32"
itertools = "0.10.0"
structopt = "0.3.16"
thiserror = "1.0.20"

[dev-dependencies]

assert_cmd = "1.0.1"
