[package]
name = "untangle_solver"
version = "0.1.0"
authors = ["Marcin Puc <marcin.e.puc@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

ndarray = "0.13.1"
strum = "0.19.2"
strum_macros = "0.19.2"
itertools = "0.9.0"
